<resources>
    <string name="app_name">Таймер для тренировок</string>
    <string name="add_timer_title">Добавление таймера</string>
    <string name="add_timer_changing_title">Изменение таймера</string>
    <string name="add_timer_name">Имя таймера</string>
    <string name="add_timer_preparations">Подготовка</string>
    <string name="add_timer_working_time">Время работы</string>
    <string name="add_timer_rest">Отдых</string>
    <string name="add_timer_cycles">Циклы</string>
    <string name="add_timer_sets">Сеты</string>
    <string name="add_timer_rest_between_sets">Отдых между сетами</string>
    <string name="add_timer_color">Выбрать цвет</string>
    <string name="add_timer_save">Добавить таймер</string>
    <string name="add_timer_update">Обновить таймер</string>
    <string name="add_timer_starting_value">10</string>
    <string name="add_timer_starting_name">Таймер</string>
    <string name="list_with_timers_item_delete">Удалить</string>
    <string name="list_with_timers_item_change">Изменить</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="finishTraining">Выйти</string>
    <string name="finishTrainingSure">Хотите закончить тренировку?</string>
    <string name="finish">Конец</string>
    <string name="add_timer">Добавить таймер</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="language">Язык</string>
    <string name="now_playing">Сейчас:</string>
    <string name="settings">Настойки</string>
    <string name="clear_data">Очистить данные</string>
    <string name="font_size">Размер шрифта</string>
    <string name="font_size_add">На сколько увеличить размер шрифта?</string>
    <string name="error">Ошибка</string>
    <string name="error_message">Не подходящие данные!</string>
    <string name="ok">ОК</string>

    <string name="pref_font_size" translatable="false">Размер шрифта</string>
    <string name="pref_dark_theme" translatable="false">Тёмная тема</string>
    <string name="pref_language" translatable="false">Язык</string>
    <string name="pref_clear_data" translatable="false">Очистить данные</string>


</resources>