<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory>
    <EditTextPreference
        android:defaultValue="0"
        android:dialogTitle="@string/font_size_add"
        android:key="@string/pref_font_size"
        android:title="@string/font_size" />
</PreferenceCategory>
<PreferenceCategory>
<CheckBoxPreference
    android:defaultValue="false"
    android:key="@string/pref_dark_theme"
    android:title="@string/dark_theme"
    />
</PreferenceCategory>
    <PreferenceCategory>
        <ListPreference
            android:dialogTitle="@string/language"
            android:entryValues="@array/Languages"
            android:entries="@array/Languages"
            android:defaultValue="true"
            android:key="@string/pref_language"
            android:title="@string/language" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference
            android:key="@string/pref_clear_data"
            android:title="@string/clear_data" />
    </PreferenceCategory>
</PreferenceScreen>
